AlexQuijote Commit 44. Construídas las líneas del navbar con pseudo elementos before y after.

--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -59,7 +59,7 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner lugar">
               <!-- Capa Pc -->
-              <img src="assets/img/pc.png">
+              <img id="pcposicion" src="assets/img/pc.png">
               <div class="carousel-item active posicion6">
                 <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.png" alt="Nusimi" class="d-block"></a>
                 <h3 class="h3nusimi">NuSimi</h3>
