--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,13 +1,18 @@
+<!-- Inicio Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-ketanolab">
+  <!-- Container -->
   <div class="container">
+    <!-- Brand de Ketanolab vista en móviles -->
       <a class="navbar-brand d-lg-none" href="#">
         <img class="brand-mobile" src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
       </a>
-    <button id="align-hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Botón sánduche en vista móvil -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav"><!--mx-auto-->
+      <div class="navbar-nav">
+        <!-- Navbar vista Pc -->
           <a class="navbar-brand d-none d-lg-block" href="#">
               <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
           </a>
