--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -52,27 +52,26 @@
             </div>
           </div>
         </div>
-        <!-- Inicio de columna 3 de fila 1 de carousel -->
+        <!-- Inicio columna 3 de fila 1 carrusel -->
         <div class="col-md-4">
           <!-- Carousel -->
-          <div id="keta" class="carousel slide" data-bs-ride="carousel">
+          <div id="ketano" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
-            <div class="carousel-inner lugar">
+            <div class="carousel-inner">
               <!-- Capa Pc -->
-              <img id="pcposicion" src="assets/img/pc.png">
+              <img src="assets/img/pc.png">
               <div class="carousel-item active posicion6">
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.png" alt="Nusimi" class="d-block"></a>
-                <h3 class="h3nusimi">NuSimi</h3>
+                <h3 class="h3nusimi">Nusimi</h3>
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi&" target="_blank"><img src="assets/img/nusimi.png" alt="Certix" class="d-block"></a>
               </div>
               <div class="carousel-item posicion7">
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/francisco.png" alt="San Francisco." class="d-block"></a>
                 <h3 class="h3francisco">San Francisco</h3>
+                <img src="assets/img/francisco.png" alt="Ecotambo" class="d-block">
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+       
     <!-- Inicio container clientes -->
   <div class="container clientes">
     <!-- h1 Nuestros Clientes -->
