--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,5 +1,5 @@
-<!-- Inicio Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-ketanolab">
+<!-- Inicio Navbar que colapsa en hamburguesa en el pixel 1200 de width-->
+<nav class="navbar navbar-expand-xl navbar-dark bg-ketanolab">
   <!-- Container -->
   <div class="container">
     <!-- Brand de Ketanolab vista en móviles -->
