--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -34,6 +34,21 @@
                                 {{"blockchain.paragraph.2" | translate}}
                             </p>
                         </li>
+                        <li>
+                            <p class="text-justify mt-5"> 
+                                {{"blockchain.paragraph.3" | translate}}
+                            </p>
+                        </li>
+                        <li>
+                            <p class="text-justify mt-5"> 
+                                {{"blockchain.paragraph.4" | translate}}
+                            </p>
+                        </li>
+                        <li>
+                            <p class="text-justify mt-5"> 
+                                {{"blockchain.paragraph.5" | translate}}
+                            </p>
+                        </li>
                         <li class="centrar_boton">
 
                         <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
