--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -27,6 +27,19 @@
                         <li class="text-justify mt-5">
                             {{"commerce.paragraph.1" | translate}}
                         </li>
+                        <li class="text-justify mt-5">
+                            {{"commerce.paragraph.2" | translate}}
+                        </li>
+                        <li class="text-justify mt-5">
+                            {{"commerce.paragraph.3" | translate}}
+                        </li>
+                        <li class="text-justify mt-5">
+                            {{"commerce.paragraph.4" | translate}}
+                        </li>
+                        <li class="text-justify mt-5">
+                            {{"commerce.paragraph.5" | translate}}
+                        </li>
+                      
                         <li class="centrar_boton">
 
                         <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
