--- a/src/app/Components/turismo/turismo.component.html
+++ b/src/app/Components/turismo/turismo.component.html
@@ -26,6 +26,9 @@
                         <li class="text-justify mt-5">
                             {{"sightseeing.paragraph.1" | translate}}
                         </li>
+                        <li class="text-justify mt-5">
+                            {{"sightseeing.paragraph.2" | translate}}
+                        </li>
                         <li class="centrar_boton">
 
                         <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
