--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -27,6 +27,12 @@
                         <li class="text-justify mt-5">
                             {{"services.paragraph.1" | translate}}
                         </li>
+                        <li class="text-justify mt-5">
+                            {{"services.paragraph.2" | translate}}
+                        </li>
+                        <li class="text-justify mt-5">
+                            {{"services.paragraph.3" | translate}}
+                        </li>
                         <li class="centrar_boton">
 
                         <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
